<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Transition
        app:constraintSetEnd="@id/end"
        app:constraintSetStart="@id/start"
        app:duration="1000">

        <OnClick
            app:clickAction="toggle"
            app:targetId="@id/tv_h" />

        <KeyFrameSet>

            <KeyPosition
                app:curveFit="spline"
                app:framePosition="50"
                app:keyPositionType="deltaRelative"
                app:motionTarget="@id/tv_h"
                app:pathMotionArc="startVertical"
                app:percentX="1" />
            <KeyPosition
                app:curveFit="spline"
                app:framePosition="50"
                app:keyPositionType="pathRelative"
                app:motionTarget="@id/tv_o"
                app:pathMotionArc="startVertical"
                app:percentX="0.5"
                app:percentY="-0.5" />
            <KeyPosition
                app:curveFit="spline"
                app:framePosition="50"
                app:keyPositionType="parentRelative"
                app:motionTarget="@id/tv_w"
                app:pathMotionArc="startVertical"
                app:percentX="0.5"
                app:percentY="0.25" />


        </KeyFrameSet>

    </Transition>

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@+id/tv_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/h"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Motion app:pathMotionArc="startHorizontal" />

        </Constraint>

        <Constraint
            android:id="@+id/tv_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/o"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_h">

            <Motion app:pathMotionArc="startHorizontal" />

        </Constraint>

        <Constraint
            android:id="@+id/tv_w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/w"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_o">

            <Motion app:pathMotionArc="startHorizontal" />

        </Constraint>
    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
        <Constraint
            android:id="@+id/tv_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/h"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_o"
            app:layout_constraintTop_toTopOf="parent">

        </Constraint>

        <Constraint
            android:id="@+id/tv_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/tv_w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/w"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_o"
            app:layout_constraintTop_toTopOf="parent" />
    </ConstraintSet>

</MotionScene>